change email to Decoded email

--- a/store/.gitconfig
+++ b/store/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Jonas Haefele
-	email = hello@jonashaefele.com
+	email = jonas@decoded.co
 [push]
 	default = simple
 [filter "media"]
